--- a/assets/stylesheets/pages.css
+++ b/assets/stylesheets/pages.css
@@ -13,7 +13,7 @@
 
 /*** PARKING PAGE ***/
 .pages.parking {
-  background: #ffffff url("../images/background.png") center center no-repeat;
+  background: #ffffff url("../images/background.png") center center no-repeat fixed;
   background-size: cover;
 }
 
